--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "build": "npx tsc -p tsconfig.json && next build"
+    "build": "next build"
   },
   "dependencies": {
-    "next": "^13.5.6",
+    "next": "^16.0.0",
     "react": "^18.2.0",
-    "react-cookie": "^6.1.1",
+    "react-cookie": "^8.0.1",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.5",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^3.0.0-beta.2"
+    "sass": "^1.69.5"
+  },
+  "engines": {
+    "node": "^22.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.3",
-    "@types/node": "^20.8.7",
+    "@types/node": "24.9.1",
     "@types/react": "^18.2.30",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
