--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "noFallthroughCasesInSwitch": true,
     /* next.js */
     "esModuleInterop": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
